--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,12 @@ html {
     list-style-type: none;
     transition: 0.1s;
     max-width: 100%;
+    justify-content: center;
 }
 
 /* GENERAL INFO */
 header {
-    display: inline-flex;   /* FIND OUT HOW TO CENTER THE HEADER WITH THE MAIN */
+    display: inline-flex;
     margin: 3rem auto;
     padding: 0 auto;
     flex-direction: row;
@@ -80,7 +81,7 @@ article .proj_desc {
 /* JS STYLING LINK */
 
 .project.active .proj_desc {
-    height: 190px;
+    height: 90px;
     transition: .3s;
 }
 
@@ -104,3 +105,35 @@ article .proj_desc {
 .skills_list img {
     margin-right: 1.2rem;
 }
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 768px) {
+    .header_info {
+        margin: 0;
+        line-height: 2.4rem;
+        flex-wrap: nowrap;
+    }
+
+    #name {
+        font-size: 25px;
+    }
+
+    main {
+        margin-top: 1.5rem;
+        width: 90%;
+    }
+
+    .project.active .proj_desc {
+        height: 190px;
+        transition: .3s;
+    }
+
+    .skills_list {
+        padding: 0;
+        margin-left: 1.5rem;
+        width: 100%;
+    }
+}
+
+/*320px — 480px: Mobile devices
